<resources>
    <string name="app_name">Fresh On Wheel</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">STORE</string>
    <string name="title_cart">CART</string>
    <string name="title_profile">MY ACCOUNT</string>
    <string name="searchquery">Search here</string>
    <string name="your_first_name_last_name"><![CDATA[your first name & last name]]></string>
    <string name="terms_of_use_privacy_policy"><![CDATA[TERMS OF USE & PRIVACY POLICY]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="delivery_address">Delivery address</string>
    <string name="payment_type">Payment type</string>
    <string name="select_delivery_date">Select delivery date</string>
    <string name="poceed">PROCEED</string>
    <string name="empty_cart_desc">You havn\'t made any choice yet</string>
    <string name="start_shopping">START SHOPPING</string>
    <string name="empty_cart_heading">Your cart is empty</string>

    <string name="empty_order_desc">You havn\'t made any orders yet</string>
    <string name="empty_orders_title">No Orders</string>
    <string name="item_total">Item Total</string>
    <string name="offer">Offer</string>
    <string name="total_discount">Total Discount</string>
    <string name="to_pay">To Pay</string>
    <string name="bill_details">Bill Details</string>
    <string name="rupee_symbol">₹</string>
    <string name="percentage_symbol">%</string>
    <string name="kg">kg</string>
    <string name="only_for_registered_customers">Only for Registered Customers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
