<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <Space
            android:layout_width="1dp"
            android:layout_height="250dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_shop"
            android:tooltipText="empty"/>


        <TextView
            android:id="@+id/empty_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro"
            android:gravity="center"
            android:text="@string/empty_cart_heading"
            android:textAllCaps="true"
            android:textSize="18dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro"
            android:gravity="center"
            android:id="@+id/empty_description"
            android:text="@string/empty_cart_desc" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/empty_button"
            android:text="@string/start_shopping"
            android:layout_marginTop="@dimen/margin_15"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" />

        <Space
            android:layout_width="1dp"
            android:layout_height="250dp"/>

    </LinearLayout>

</RelativeLayout>