<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            app:cardCornerRadius="@dimen/margin_20"
            app:cardElevation="@dimen/margin_5"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                android:padding="18dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_20"
                    android:src="@drawable/fresh_login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Login"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/phone_number"
                    app:boxCornerRadiusBottomEnd="@dimen/margin_20"
                    app:boxCornerRadiusBottomStart="@dimen/margin_20"
                    app:boxCornerRadiusTopEnd="@dimen/margin_20"
                    app:boxCornerRadiusTopStart="@dimen/margin_20"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:startIconDrawable="@drawable/ic_smartphone_black_24dp"
                    app:startIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        style="Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/password"
                    app:boxCornerRadiusBottomEnd="@dimen/margin_20"
                    app:boxCornerRadiusBottomStart="@dimen/margin_20"
                    app:boxCornerRadiusTopEnd="@dimen/margin_20"
                    app:boxCornerRadiusTopStart="@dimen/margin_20"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                    app:startIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:padding="12dp"
                    android:text="@string/login"
                    app:cornerRadius="@dimen/margin_20" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </ScrollView>

    <RelativeLayout
        android:id="@+id/transparent_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#63F0F8FF"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:padding="@dimen/margin_10"
        app:cardCornerRadius="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/only_for_registered_customers"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:text="Contact: 9606226969"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>